crates/biome_js_type_info/tests/snapshots/infer_resolved_type_of_disposable_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsDisposable(): Disposable {
	return {};
}

```

## Result

```
sync Function "returnsDisposable" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}
```

## Registered types

```
Global TypeId(0) => instanceof Disposable
```
