crates/biome_js_type_info/tests/snapshots/infer_resolved_type_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

```

## Result

```
sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(7)
}
```

## Registered types

```

Global TypeId(7) => instanceof Global TypeId(8)

Global TypeId(8) => instanceof Promise<T = number>

```
