crates/biome_js_type_info/tests/snapshots/infer_type_of_async_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
async function returnsPromise(): Promise<string> {
	return "value";
}

```

## Result

```
async Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Local TypeId(0)
}
```

## Registered types

```
Module TypeId(0) => instanceof unresolved reference "Promise"<string> (scope ID: 0)
```
