crates/biome_js_type_info/tests/snapshots/infer_type_of_binary_expression_eq.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const a = 1 === 1;

```

## Result

```
a => bool: true

```

## Registered types

```
Module TypeId(0) => bool: true
```
