crates/biome_js_type_info/tests/snapshots/infer_type_of_call_expression_with_type_arguments.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
first<string>([]);

```

## Result

```
Call Local TypeId(0)(Local TypeId(1))
```

## Registered types

```
Module TypeId(0) => instanceof unresolved reference "first" (scope ID: 0)<string>

Module TypeId(1) => Tuple {
    elements: [],
    is_inferred_array: true,
}
```
