crates/biome_js_type_info/tests/snapshots/infer_type_of_contextual_arrow_function_binding.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
new Job((value) => value);

```

## Result

```
Parameter Local TypeId(0)[0]
```

## Registered types

```
Module TypeId(0) => CallArgument new unresolved reference "Job" (scope ID: 0)(unknown)[0]
```
