crates/biome_js_type_info/tests/snapshots/infer_type_of_contextual_callback_parameter.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
run<Context>("kind", (first, second) => second);

```

## Result

```
Parameter Local TypeId(3)[1]
```

## Registered types

```
Module TypeId(0) => instanceof unresolved reference "Context" (scope ID: 0)

Module TypeId(1) => instanceof unresolved reference "run" (scope ID: 0)<Local TypeId(0)>

Module TypeId(2) => string: kind

Module TypeId(3) => CallArgument Local TypeId(1)(Local TypeId(2)unknown)[1]
```
