crates/biome_js_type_info/tests/snapshots/infer_type_of_destructured_array_element.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const [a]: Array<string> = [];

```

## Result

```
a => Local TypeId(0)[0]

```

## Registered types

```
Module TypeId(0) => instanceof unresolved reference "Array"<string> (scope ID: 0)

Module TypeId(1) => Local TypeId(0)[0]
```
